modify some  behaviours

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://www.stargaze.zone/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Stargaze Fair Burn</title>
+    <meta name="description" content="Real-time tracker of burned & distributed stars" />
+    <meta property="og:title" content="Stargaze Fair Burn 🔥">
+    <meta property="og:description" content="Real-time tracker of burned & distributed stars.">
+    <meta property="og:image" content="https://www.stargaze.zone/logo.svg">
+    <meta property="og:url" content="https://fire-app-ebon.vercel.app/">
   </head>
   <body>
     <div id="root"></div>
